tests/ui/error-codes/E0492.stderr
error[E0492]: constants cannot refer to interior mutable data
  --> $DIR/E0492.rs:4:33
   |
LL | const B: &'static AtomicUsize = &A;
   |                                 ^^ this borrow of an interior mutable value may end up in the final value

error[E0492]: statics cannot refer to interior mutable data
  --> $DIR/E0492.rs:5:34
   |
LL | static C: &'static AtomicUsize = &A;
   |                                  ^^ this borrow of an interior mutable value may end up in the final value
   |
   = help: to fix this, the value can be extracted to a separate `static` item and then referenced

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0492`.
